# FlowEngine

./: .clang-format  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  package.json  simulator.html  test_tasks.sh
.claude/: mcp.json
.claude/skills/: SKILL.md  debug3d.md  verify.md  workflow.md
.github/workflows/: ci.yml
.trae/documents/: subtraction-discipline-plan.md
build_ci/: flowengine.pc
cmake/: config.json.in  flowengine.pc.in
config/: pipeline.json  pipeline_car.json  pipeline_flowsim.json  pipeline_highway.json  pipeline_manual.json  pipeline_scene.json  pipeline_stereo_sim.json  sample_gps.nmea
docs/: ALGORITHM_INTEGRATION.md  ALGORITHM_STACK.md  API_QUICK_REFERENCE.md  DESIGN_COMPREHENSIVE_SCENARIO.md  E2E_LEARNING_V3_PLAN.md  E2E_SIMULATION_DESIGN.md  EVOLUTION_ROADMAP.md  FIX_PLAN.md  FLOWBOARD_CONTRACT.md  FLOWBOARD_SCENE_CONTRACT.md  FLOWCORO_MIGRATION_PLAN.md  FLOWSIM_ARCHITECTURE.md  FLOW_REGISTRY_PLAN.md  GETTING_STARTED.md  HARDWARE_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEARNING_GUIDE.md  LEARNING_LOOP.md  MONITORING_ARCHITECTURE.md  NOA_SCENARIO_PLAN.md  PIPELINE_ARCHITECTURE.md  PRACTICE_PROJECTS.md  PROJECT_REVIEW.md  QUICK_START.md  README.md  REAL_VEHICLE_ROADMAP.md  SCENE3D_VISUAL_FIX_PLAN.md  SCENE3D_VISUAL_TODO.md  SIMULATION_GUIDE.md  TASK_SYSTEM_GUIDE.md  TECHNICAL_DESIGN.md  TROUBLESHOOTING_3D_DASHBOARD.md  VISUALIZATION_ARCHITECTURE.md  VIS_MODULE_GUIDE.md  VIS_REARCH.md  VIS_REBUILD_PROGRESS.md  ZHONGKAI_ROAD_SCENE_PLAN.md  scene.html
include/: adas_msgs.h  algorithm_plugin.h  auto_tuner.h  bag.h  clock_service.h  config_manager.h  coroutine_task.h  crash_handler.h  dashboard_bridge.h  discovery.h  error_codes.h  fake_control_task.h  fake_perception_task.h  flow_registry.h  flowengine.h  fusion.h  health.h  intent_predictor.h  ipc_channel.h  json_extract.h  json_schema.h  logger.h  mcap_reader.h  mcap_writer.h  message_bus.h  monitor_server.h  mpc_controller.h  msg_schema.h  network_transport.h  node_context.h  node_plugin.h  param_registry.h  pid_controller.h  process_interface.h  process_manager.h  proto_support.h  road_geometry.h  scenario_loader.h  scheduler.h  sensor_driver.h  (+12 more)
modules/adas_nodes/: CMakeLists.txt  actuator_node.c  actuator_pwm_node.c  control_node.c  control_node.cpp  data_recorder_node.c  ekf_slam.c  ekf_slam.h  flowmond_node.cpp  flowsim_node.cpp  fusion_node.c  fusion_node.cpp  gps_driver_node.c  guardian_node.c  imu_driver_node.c  inference_node.c  inference_node.cpp  lane_detection_node.c  learner_node.c  lidar_driver_node.c  manual_drive_node.c  model_ota_node.c  monitor_node.c  object_tracker_node.c  perception_fusion_node.c  perception_fusion_node.cpp  perception_node.c  perception_node.cpp  planning_node.c  planning_node.cpp  prediction_node.c  safety_control_node.cpp  scene_assembler_node.c  sensor_model_node.c  sim_world_node.c  slam_node.c  slam_node.cpp  stereo_camera_node.c  stereo_vision_node.c  test_ekf_slam.c  (+4 more)
modules/adas_nodes/flowsim/: collision.cpp  collision.h  entity.h  npc_ai.cpp  npc_ai.h  physics.cpp  physics.h  road_network.cpp  road_network.h  road_position.cpp  road_position.h  route.cpp  route.h  scene_events.cpp  scene_events.h  scene_pub.cpp  scene_pub.h  sim_digest.cpp  sim_digest.h  test_collision_events.cpp  test_entity_physics.cpp  test_flowsim_node_plugin.cpp  test_flowsim_regression.cpp  test_npc_ai.cpp  test_road_network.cpp  test_route.cpp  test_scene_pub.cpp  vehicle_lights.h
modules/adas_nodes/flowsim/actor/: VehicleActor.cpp  VehicleActor.h
msg/: adas_msgs.msg
scenarios/: city_to_highway.json  city_to_highway_full.json  congestion_follow.json  curve_road.json  cutin.json  ghost_pedestrian.json  highway_exit.json  highway_noa_route.json  highway_overtake.json  infinite_straight.json  intersection_signalized.json  intersection_unprotected.json  multi_pedestrian.json  narrow_road.json  obstacle_avoid.json  oncoming_yield.json  pedestrian_crossing.json  roadwork_zone.json  straight_road.json  suite.json  zhongkai_road_full.json
scripts/: ci_sanitizers.sh  demo.sh  demo_sim.sh  deploy.sh  download_nuscenes_mini.sh  fullstack_demo.sh  install-skills.sh  launcher_smoke.sh  longevity_test.sh  multi_demo.sh  perf_compare.sh  run_kitti.sh  setup_algo_deps.sh  stress_test.sh  view_topology.sh
skills/: 01_oop_in_c.md  02_plugin_system.md  03_message_bus.md  04_ipc_channel.md  05_bag_recording.md  06_clock_service.md  07_serializer.md  08_state_machine.md  09_discovery.md  10_fusion.md  11_coroutine.md  12_demo_evaluator.md  13_e2e_learning_loop.md  14_dead_reckoning.md  15_socketcan_actuator.md  16_flowsim_scenario_design.md  17_vis_module_designer.md
src/: adas_demo.c  bag_demo.c  benchmark.c  benchmark_coro.cpp  bus_demo.c  coro_bus_demo.cpp  cpp_task_demo.cpp  e2e_demo.c  flow_launcher.c  flow_node_host.c  flowctl.c  flowmond.c  fullstack_demo.c  ipc_demo.c  launcher.c  mcap_replay.c  nuscenes_demo.c  simple_cpp_demo.cpp  task_demo.c
src/core/: bag.c  (+36 more)
test/: coro_correctness_test.cpp
tests/: sse_frame_format.test.c  test-utils.mjs  test_adas_nodes_logic.c  test_bridges.c  test_demo_evaluator.py  test_e2e_training_tools.py  test_json_schema.c  test_modules.c  test_new_modules.c  vis_coord_property.test.mjs  vis_director_layer.test.mjs  vis_director_validation.test.mjs  vis_geometry.test.mjs  vis_grep_enforce.mjs  vis_layer.test.mjs  vis_module_load.test.mjs  vis_render_smoke.test.mjs  vis_render_tick.test.mjs  vis_vehicle_lights.test.mjs  vis_view_registry.test.mjs
tools/: bag_check.c  check3d_live.mjs  demo_evaluator.py  diag_scene_init.mjs  eval_model.py  flowboard.html  flowboard_normalize.py  flowboard_server.py  foxglove_bridge.py  json_to_xodr.py  modelctl.py  msg_codegen.py  probe_color.mjs  probe_direct.mjs  probe_locate.mjs  probe_locate2.mjs  probe_scene.mjs  probe_uniform.mjs  scenario_regression.py  scenario_runner.c  topology_viewer.html  train_demo_model.py  training_bridge.py  verify_3d_fix.mjs  verify_batch.mjs  waypoint_player.py  waypoint_record.py
(+139 files in other folders)
